Major changes for release 1.0